--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="game.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>rps-ui</title>
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
+    <h1 style="text-align: center;font-family: Acme, sans-serif;">Rock Paper Scissors</h1>
+    <div class="play-buttons">
+        <button class="btn rock" type="button">Rock</button>
+        <button class="btn paper" type="button">Paper</button>
+        <button class="btn scissors" type="button">Scissors</button>
+    </div>
+    <div class="show-score">
+        <div class="screen"></div>
+    </div>
 </body>
 
 </html>
