--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="winner"></p>
         </div>
         <div class="reset">
-            <button class="btn reset" type="button" id="reset">Play again !</button>
+            <button class="reset" type="button" id="reset">Play again !</button>
         </div>
     </div>
 </body>
